--- a/samples/ISynergy.Framework.UI/Sample.UWP/Sample.UWP.csproj
+++ b/samples/ISynergy.Framework.UI/Sample.UWP/Sample.UWP.csproj
@@ -28,8 +28,8 @@
     <AssemblyName>Sample</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.18362.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -150,9 +150,9 @@
       <Project>{3828a883-b771-4e6b-b004-e521b6d7ad52}</Project>
       <Name>ISynergy.Framework.Mvvm</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\src\ISynergy.Framework.UI\ISynergy.Framework.UI.csproj">
-      <Project>{19299d2e-c242-4deb-bd2b-e0a5e7cbaa40}</Project>
-      <Name>ISynergy.Framework.UI</Name>
+    <ProjectReference Include="..\..\..\src\ISynergy.Framework.UI\ISynergy.Framework.UI.Windows.csproj">
+      <Project>{b8289c7e-e344-4b83-8b76-b439b2e057fb}</Project>
+      <Name>ISynergy.Framework.UI.Windows</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.Core\Sample.Core.csproj">
       <Project>{6b0dfcdf-7038-43bc-a033-2f80b9d9d3be}</Project>
