--- a/src/ISynergy.Framework.UI/ISynergy.Framework.UI.csproj
+++ b/src/ISynergy.Framework.UI/ISynergy.Framework.UI.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\project.props" />
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netstandard2.0;uap10.0.18362;uap10.0.19041</TargetFrameworks>
+		<TargetFrameworks>net5.0;netstandard2.0;</TargetFrameworks>
 		<!-- Ensures the .xr.xml files are generated in a proper layout folder -->
 		<GenerateLibraryLayout>true</GenerateLibraryLayout>
 
@@ -13,18 +13,19 @@
 		<PackageId>I-Synergy.Framework.UI</PackageId>
 		<Description>I-Synergy UI Framework for Uno Platform Applications</Description>
 		<PackageTags>I-Synergy, Framework, UI, Uno, Platform, UWP, WebAssembly, WASM, Android and .Net 5.0</PackageTags>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IncludeSymbols>true</IncludeSymbols>
 		<IncludeBuildOutput>true</IncludeBuildOutput>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<UnoUIDisableLongPathWarning>false</UnoUIDisableLongPathWarning>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.UI" Version="3.6.0-dev.555" />
-		<PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.0.2-uno.81" />
-		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="6.1.0-build.207.gcac670e618" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.0-build.2.g0e224f133a" />
+		<PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.0.2-uno.81" />
+		<PackageReference Include="Uno.UI" Version="3.7.0-dev.60" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -46,5 +47,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Remove="Properties\AssemblyInfo.cs" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Properties\ISynergy.Framework.UI.Uwp.rd.xml" />
 	</ItemGroup>
 </Project>
